--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <script src="assets/js/main.js"></script>
+  <script src="https://github.com/Damsonihirwe/Personal-website/blob/main/main.css"></script>
 
 </body>
 
